syntax = "proto3";

package ng;

import "google/protobuf/timestamp.proto";

message DeviceIdInfos {
  DeviceId obj = 1;

  uint32 did = 2;
  uint32 cls = 3;
  uint32 sid = 4;
}

message DeviceId { uint32 did = 1; }

enum Endpoint {
  EndpointAppDefault = 0;
  EndpointApp1 = 1;
  EndpointApp2 = 2;
  EndpointBoardLevelControl = 3;
}

enum TwoStatePulse {
  TSP_NONE = 0;
  TSP_SET = 1;
  TSP_RESET = 2;
  TSP_PULSE = 3;
}

message CaniotFrame {
  DeviceId did = 1;
  repeated uint32 payload = 2;
}

enum DeviceAlertType {
  OK = 0;
  NOTIFICATION = 1;
  WARNING = 2;
  INERROR = 3;
  INHIBITTED = 4;
}

message DeviceAlert {
  string message = 1;
  DeviceAlertType alert_type = 2;
  google.protobuf.Timestamp timestamp = 3;
  optional string description = 4;
}